Fixed blog card abnormally large title overflow

--- a/src/partials/_blogcards.scss
+++ b/src/partials/_blogcards.scss
@@ -21,7 +21,9 @@
       background-repeat: no-repeat;
 
       &__title {
+        max-width: 100%;
         z-index: 2;
+        word-wrap: break-word;
       }
 
       &__link {
